# SkyPro-Chapter4-OOP-course-work

./: README.md  main.py  pyproject.toml
htmlcov/: index.html
src/: api.py  storage.py  utils.py  vacancy.py
tests/: test_api.py  test_storage.py  test_utils.py  test_vacancy.py
